feat: created cruds to categiries and brands
